# rust-voxel

./: Cargo.toml
src/: geometry.rs  main.rs  voxel.rs
